--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "description": "An extension for debugging Node.js programs and Chrome.",
   "license": "MIT",
   "engines": {
-    "vscode": "^1.80.0",
+    "vscode": "1.80.0",
     "node": ">=10"
   },
   "icon": "resources/logo.png",
@@ -49,36 +49,36 @@
     "test:lint": "gulp lint"
   },
   "dependencies": {
-    "@c4312/chromehash": "^0.3.0",
-    "@vscode/js-debug-browsers": "^1.0.8",
-    "@vscode/l10n": "^0.0.13",
-    "@vscode/win32-app-container-tokens": "^0.1.0",
-    "acorn": "^8.10.0",
-    "acorn-loose": "^8.3.0",
-    "astring": "^1.8.1",
-    "color": "^4.2.1",
-    "data-uri-to-buffer": "^3.0.1",
-    "default-browser": "^2.0.1",
-    "dotenv": "^16.0.0",
-    "estraverse": "^5.3.0",
-    "execa": "^5.1.1",
-    "glob-stream": "^7.0.0",
-    "got": "^11.8.6",
-    "inversify": "^6.0.1",
-    "js-xxhash": "^1.0.4",
-    "jsonc-parser": "^3.0.0",
-    "linkifyjs": "^3.0.5",
-    "micromatch": "^4.0.5",
-    "path-browserify": "^1.0.1",
-    "preact": "^10.6.6",
-    "reflect-metadata": "^0.1.13",
-    "signale": "^1.4.0",
+    "@c4312/chromehash": "0.3.0",
+    "@vscode/js-debug-browsers": "1.0.8",
+    "@vscode/l10n": "0.0.13",
+    "@vscode/win32-app-container-tokens": "0.1.0",
+    "acorn": "8.10.0",
+    "acorn-loose": "8.3.0",
+    "astring": "1.8.1",
+    "color": "4.2.1",
+    "data-uri-to-buffer": "3.0.1",
+    "default-browser": "2.0.1",
+    "dotenv": "16.0.0",
+    "estraverse": "5.3.0",
+    "execa": "5.1.1",
+    "glob-stream": "7.0.0",
+    "got": "11.8.6",
+    "inversify": "6.0.1",
+    "js-xxhash": "1.0.4",
+    "jsonc-parser": "3.0.0",
+    "linkifyjs": "3.0.5",
+    "micromatch": "4.0.5",
+    "path-browserify": "1.0.1",
+    "preact": "10.6.6",
+    "reflect-metadata": "0.1.13",
+    "signale": "1.4.0",
     "source-map": "0.8.0-beta.0",
-    "source-map-support": "^0.5.21",
-    "split2": "^4.2.0",
-    "to-absolute-glob": "^2.0.2",
-    "vscode-tas-client": "^0.1.42",
-    "ws": "^8.5.0"
+    "source-map-support": "0.5.21",
+    "split2": "4.2.0",
+    "to-absolute-glob": "2.0.2",
+    "vscode-tas-client": "0.1.42",
+    "ws": "8.5.0"
   },
   "prettier": {
     "trailingComma": "all",
@@ -88,81 +88,81 @@
     "tabWidth": 2
   },
   "devDependencies": {
-    "@c4312/matcha": "^1.3.1",
-    "@mixer/parallel-prettier": "^2.0.1",
-    "@pptr/testrunner": "^0.8.0",
-    "@types/chai": "^4.3.0",
-    "@types/chai-as-promised": "^7.1.5",
-    "@types/chai-string": "^1.4.2",
-    "@types/chai-subset": "^1.3.3",
-    "@types/color": "^3.0.3",
-    "@types/debug": "^4.1.7",
-    "@types/diff": "^5.0.2",
-    "@types/estraverse": "^5.1.1",
+    "@c4312/matcha": "1.3.1",
+    "@mixer/parallel-prettier": "2.0.1",
+    "@pptr/testrunner": "0.8.0",
+    "@types/chai": "4.3.0",
+    "@types/chai-as-promised": "7.1.5",
+    "@types/chai-string": "1.4.2",
+    "@types/chai-subset": "1.3.3",
+    "@types/color": "3.0.3",
+    "@types/debug": "4.1.7",
+    "@types/diff": "5.0.2",
+    "@types/estraverse": "5.1.1",
     "@types/estree": "0.0.51",
-    "@types/express": "^4.17.13",
-    "@types/glob": "^7.2.0",
-    "@types/glob-stream": "^6.1.1",
-    "@types/gulp": "^4.0.9",
-    "@types/js-beautify": "^1.13.3",
-    "@types/json-schema": "^7.0.11",
-    "@types/linkifyjs": "^2.1.4",
-    "@types/long": "^4.0.1",
-    "@types/marked": "^4.0.3",
-    "@types/micromatch": "^4.0.2",
-    "@types/minimist": "^1.2.2",
-    "@types/mkdirp": "^1.0.2",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^17.0.23",
-    "@types/prettier": "^2.4.4",
-    "@types/signale": "^1.4.4",
-    "@types/sinon": "^10.0.11",
-    "@types/split2": "^4.2.0",
-    "@types/stream-buffers": "^3.0.4",
-    "@types/tmp": "^0.2.3",
-    "@types/to-absolute-glob": "^2.0.1",
-    "@types/ws": "^8.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "@vscode/dwarf-debugging": "^0.0.2",
-    "@vscode/test-electron": "^2.3.4",
-    "chai": "^4.3.6",
-    "chai-as-promised": "^7.1.1",
-    "chai-string": "^1.5.0",
-    "chai-subset": "^1.6.0",
-    "del": "^6.0.0",
-    "diff": "^5.0.0",
-    "esbuild": "^0.17.10",
-    "eslint": "^8.12.0",
-    "eslint-plugin-header": "^3.1.1",
-    "eslint-plugin-react": "^7.29.4",
-    "express": "^4.17.3",
-    "glob": "^7.2.0",
-    "gulp": "^4.0.2",
-    "gulp-cli": "^2.3.0",
-    "gulp-filter": "^7.0.0",
-    "gulp-rename": "^2.0.0",
-    "gulp-util": "^3.0.8",
-    "husky": "^7.0.4",
-    "jszip": "^3.10.1",
-    "marked": "^4.0.12",
-    "merge2": "^1.4.1",
-    "minimist": "^1.2.6",
-    "mocha": "^10.2.0",
-    "mocha-junit-reporter": "^2.0.2",
-    "mocha-multi-reporters": "^1.5.1",
-    "npm-run-all": "^4.1.5",
-    "nyc": "^15.1.0",
-    "playwright": "^1.26.0",
-    "prettier": "^2.6.1",
-    "sinon": "^13.0.1",
-    "stream-buffers": "^3.0.2",
-    "ts-node": "^10.7.0",
-    "tsx": "^3.12.3",
-    "typescript": "^4.6.3",
-    "vsce": "^2.7.0",
-    "vscode-debugadapter-testsupport": "^1.47.0",
-    "vscode-debugprotocol": "^1.47.0"
+    "@types/express": "4.17.13",
+    "@types/glob": "7.2.0",
+    "@types/glob-stream": "6.1.1",
+    "@types/gulp": "4.0.9",
+    "@types/js-beautify": "1.13.3",
+    "@types/json-schema": "7.0.11",
+    "@types/linkifyjs": "2.1.4",
+    "@types/long": "4.0.1",
+    "@types/marked": "4.0.3",
+    "@types/micromatch": "4.0.2",
+    "@types/minimist": "1.2.2",
+    "@types/mkdirp": "1.0.2",
+    "@types/mocha": "9.1.0",
+    "@types/node": "17.0.23",
+    "@types/prettier": "2.4.4",
+    "@types/signale": "1.4.4",
+    "@types/sinon": "10.0.11",
+    "@types/split2": "4.2.0",
+    "@types/stream-buffers": "3.0.4",
+    "@types/tmp": "0.2.3",
+    "@types/to-absolute-glob": "2.0.1",
+    "@types/ws": "8.5.3",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
+    "@vscode/dwarf-debugging": "0.0.2",
+    "@vscode/test-electron": "2.3.4",
+    "chai": "4.3.6",
+    "chai-as-promised": "7.1.1",
+    "chai-string": "1.5.0",
+    "chai-subset": "1.6.0",
+    "del": "6.0.0",
+    "diff": "5.0.0",
+    "esbuild": "0.17.10",
+    "eslint": "8.12.0",
+    "eslint-plugin-header": "3.1.1",
+    "eslint-plugin-react": "7.29.4",
+    "express": "4.17.3",
+    "glob": "7.2.0",
+    "gulp": "4.0.2",
+    "gulp-cli": "2.3.0",
+    "gulp-filter": "7.0.0",
+    "gulp-rename": "2.0.0",
+    "gulp-util": "3.0.8",
+    "husky": "7.0.4",
+    "jszip": "3.10.1",
+    "marked": "4.0.12",
+    "merge2": "1.4.1",
+    "minimist": "1.2.6",
+    "mocha": "10.2.0",
+    "mocha-junit-reporter": "2.0.2",
+    "mocha-multi-reporters": "1.5.1",
+    "npm-run-all": "4.1.5",
+    "nyc": "15.1.0",
+    "playwright": "1.26.0",
+    "prettier": "2.6.1",
+    "sinon": "13.0.1",
+    "stream-buffers": "3.0.2",
+    "ts-node": "10.7.0",
+    "tsx": "3.12.3",
+    "typescript": "4.6.3",
+    "vsce": "2.7.0",
+    "vscode-debugadapter-testsupport": "1.47.0",
+    "vscode-debugprotocol": "1.47.0"
   },
   "main": "./src/extension.js",
   "enabledApiProposals": [
