--- a/testWorkspace/simpleNode/package.json
+++ b/testWorkspace/simpleNode/package.json
@@ -1,6 +1,30 @@
 {
   "scripts": {
     "startWithBrk": "node --inspect-brk=29204 logNodeOptions.js",
-    "startWithoutBrk": "node logNodeOptions.js"
+    "startWithoutBrk": "node logNodeOptions.js",
+    "prepublishOnly": "TypeScriptESBuild Source/**/*.ts"
+  },
+  "homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
+  "bugs": {
+    "url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
+  },
+  "version": "0.0.1",
+  "license": "MIT",
+  "type": "module",
+  "private": "false",
+  "publishConfig": {
+    "access": "public"
+  },
+  "author": {
+    "name": "Nikola Hristov",
+    "email": "nikola@nikolahristov.tech",
+    "url": "https://nikolahristov.tech"
+  },
+  "devDependencies": {
+    "typescript-esbuild": "0.3.1"
   }
 }
