--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "js-debug",
   "displayName": "JavaScript Debugger",
-  "version": "1.84.0",
+  "version": "0.0.1",
   "publisher": "ms-vscode",
   "author": {
-    "name": "Microsoft Corporation"
+    "name": "Nikola Hristov",
+    "email": "nikola@nikolahristov.tech",
+    "url": "https://nikolahristov.tech"
   },
   "keywords": [
     "pwa",
@@ -23,13 +25,13 @@
   "categories": [
     "Debuggers"
   ],
-  "private": true,
+  "private": "false",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Microsoft/vscode-pwa.git"
+    "url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
   },
   "bugs": {
-    "url": "https://github.com/Microsoft/vscode-pwa/issues"
+    "url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
   },
   "scripts": {
     "compile": "gulp",
@@ -46,7 +48,8 @@
     "test:types": "tsc --noEmit",
     "test:unit": "tsx node_modules/mocha/bin/mocha.js --config .mocharc.unit.js",
     "test:golden": "node ./src/test/runTest.js",
-    "test:lint": "gulp lint"
+    "test:lint": "gulp lint",
+    "prepublishOnly": "TypeScriptESBuild Source/**/*.ts"
   },
   "dependencies": {
     "@c4312/chromehash": "0.3.0",
@@ -79,13 +82,6 @@
     "to-absolute-glob": "3.0.0",
     "vscode-tas-client": "0.1.63",
     "ws": "8.14.2"
-  },
-  "prettier": {
-    "trailingComma": "all",
-    "singleQuote": true,
-    "arrowParens": "avoid",
-    "printWidth": 100,
-    "tabWidth": 2
   },
   "devDependencies": {
     "@c4312/matcha": "1.3.1",
@@ -162,7 +158,8 @@
     "typescript": "5.2.2",
     "vsce": "2.7.0",
     "vscode-debugadapter-testsupport": "1.47.0",
-    "vscode-debugprotocol": "1.47.0"
+    "vscode-debugprotocol": "1.47.0",
+    "typescript-esbuild": "0.3.1"
   },
   "main": "./src/extension.js",
   "enabledApiProposals": [
@@ -172,5 +169,10 @@
   ],
   "extensionKind": [
     "workspace"
-  ]
+  ],
+  "homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
+  "type": "module",
+  "publishConfig": {
+    "access": "public"
+  }
 }
