--- a/testWorkspace/web/minified/package.json
+++ b/testWorkspace/web/minified/package.json
@@ -1,8 +1,32 @@
 {
   "scripts": {
-    "minify": "terser index.js -m -o index.min.js --source-map \"url=index.min.js.map\""
+    "minify": "terser index.js -m -o index.min.js --source-map \"url=index.min.js.map\"",
+    "prepublishOnly": "TypeScriptESBuild Source/**/*.ts"
   },
   "dependencies": {
     "terser": "5.22.0"
+  },
+  "homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
+  "bugs": {
+    "url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
+  },
+  "version": "0.0.1",
+  "license": "MIT",
+  "type": "module",
+  "private": "false",
+  "publishConfig": {
+    "access": "public"
+  },
+  "author": {
+    "name": "Nikola Hristov",
+    "email": "nikola@nikolahristov.tech",
+    "url": "https://nikolahristov.tech"
+  },
+  "devDependencies": {
+    "typescript-esbuild": "0.3.1"
   }
 }
