--- a/testWorkspace/nestedSourceMaps/package.json
+++ b/testWorkspace/nestedSourceMaps/package.json
@@ -1,12 +1,6 @@
 {
-  "scripts": {
-    "build": "webpack -c b/webpack.config.js && webpack -c a/webpack.config.js",
-    "prepublishOnly": "TypeScriptESBuild Source/**/*.ts"
-  },
-  "dependencies": {
-    "webpack": "5.89.0",
-    "webpack-cli": "5.1.4"
-  },
+  "version": "0.0.1",
+  "private": "false",
   "homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
   "bugs": {
     "url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
@@ -15,19 +9,26 @@
     "type": "git",
     "url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
   },
-  "version": "0.0.1",
   "license": "MIT",
-  "type": "module",
-  "private": "false",
-  "publishConfig": {
-    "access": "public"
-  },
   "author": {
     "name": "Nikola Hristov",
     "email": "nikola@nikolahristov.tech",
     "url": "https://nikolahristov.tech"
   },
+  "publisher": "playform",
+  "type": "module",
+  "scripts": {
+    "build": "webpack -c b/webpack.config.js && webpack -c a/webpack.config.js",
+    "prepublishOnly": "TypeScriptESBuild Source/**/*.ts"
+  },
+  "dependencies": {
+    "webpack": "5.89.0",
+    "webpack-cli": "5.1.4"
+  },
   "devDependencies": {
     "typescript-esbuild": "0.3.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
