--- a/package.json
+++ b/package.json
@@ -36,20 +36,13 @@
 		"publish": "gulp publish",
 		"precommit": "npm-run-all --parallel test:lint test:types",
 		"updatetypes": "cd src/typings && npx -y @vscode/dts dev && npx -y @vscode/dts master",
-		"updatenodeapi": "python src/build/getNodePdl.py && prettier --write src/build/nodeCustom.ts",
+		"updatenodeapi": "python src/build/getNodePdl.py",
 		"generateapis": "tsx src/build/generateDap.ts && tsx src/build/generateCdp.ts",
 		"test": "gulp && npm-run-all --parallel test:unit test:types test:golden test:lint",
 		"test:types": "tsc --noEmit",
 		"test:unit": "tsx node_modules/mocha/bin/mocha.js --config .mocharc.unit.js",
 		"test:golden": "node ./src/test/runTest.js",
 		"test:lint": "gulp lint"
-	},
-	"prettier": {
-		"arrowParens": "avoid",
-		"printWidth": 100,
-		"singleQuote": true,
-		"tabWidth": 2,
-		"trailingComma": "all"
 	},
 	"dependencies": {
 		"@c4312/chromehash": "0.3.0",
@@ -127,7 +120,7 @@
 		"chai-subset": "1.6.0",
 		"del": "7.1.0",
 		"diff": "5.1.0",
-		"esbuild": "0.19.5",
+		"esbuild": "0.19.6",
 		"eslint": "8.54.0",
 		"eslint-plugin-header": "3.1.1",
 		"eslint-plugin-react": "7.33.2",
@@ -152,7 +145,7 @@
 		"sinon": "17.0.1",
 		"stream-buffers": "3.0.2",
 		"ts-node": "10.9.1",
-		"tsx": "4.1.3",
+		"tsx": "4.1.4",
 		"typescript": "5.2.2",
 		"vsce": "2.7.0"
 	},
