--- a/package.json
+++ b/package.json
@@ -1,165 +1,159 @@
 {
-	"name": "js-debug",
-	"displayName": "JavaScript Debugger",
-	"version": "1.84.0",
-	"private": true,
-	"description": "An extension for debugging Node.js programs and Chrome.",
-	"categories": [
-		"Debuggers"
-	],
-	"keywords": [
-		"pwa",
-		"javascript",
-		"node",
-		"chrome",
-		"debugger"
-	],
-	"bugs": {
-		"url": "https://github.com/Microsoft/vscode-pwa/issues"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-pwa.git"
-	},
-	"license": "MIT",
-	"author": {
-		"name": "Microsoft Corporation"
-	},
-	"publisher": "ms-vscode",
-	"main": "./src/extension.js",
-	"scripts": {
-		"compile": "gulp",
-		"watch": "gulp watch",
-		"fmt": "gulp format",
-		"prepare": "husky install",
-		"package": "gulp package",
-		"publish": "gulp publish",
-		"precommit": "npm-run-all --parallel test:lint test:types",
-		"updatetypes": "cd src/typings && npx -y @vscode/dts dev && npx -y @vscode/dts master",
-		"updatenodeapi": "python src/build/getNodePdl.py",
-		"generateapis": "tsx src/build/generateDap.ts && tsx src/build/generateCdp.ts",
-		"test": "gulp && npm-run-all --parallel test:unit test:types test:golden test:lint",
-		"test:types": "tsc --noEmit",
-		"test:unit": "tsx node_modules/mocha/bin/mocha.js --config .mocharc.unit.js",
-		"test:golden": "node ./src/test/runTest.js",
-		"test:lint": "gulp lint"
-	},
-	"dependencies": {
-		"@c4312/chromehash": "0.3.0",
-		"@vscode/js-debug-browsers": "1.1.0",
-		"@vscode/l10n": "0.0.16",
-		"@vscode/win32-app-container-tokens": "0.1.0",
-		"acorn": "8.11.2",
-		"acorn-loose": "8.4.0",
-		"astring": "1.8.6",
-		"color": "4.2.3",
-		"data-uri-to-buffer": "6.0.1",
-		"default-browser": "5.1.0",
-		"dotenv": "16.3.1",
-		"eslint-visitor-keys": "3.4.3",
-		"execa": "8.0.1",
-		"glob-stream": "8.0.0",
-		"got": "13.0.0",
-		"inversify": "6.0.2",
-		"js-xxhash": "3.0.0",
-		"jsonc-parser": "3.2.0",
-		"linkifyjs": "4.1.2",
-		"micromatch": "4.0.5",
-		"path-browserify": "1.0.1",
-		"preact": "10.19.2",
-		"reflect-metadata": "0.1.13",
-		"signale": "1.4.0",
-		"source-map": "0.8.0-beta.0",
-		"source-map-support": "0.5.21",
-		"split2": "4.2.0",
-		"to-absolute-glob": "3.0.0",
-		"vscode-tas-client": "0.1.75",
-		"ws": "8.14.2"
-	},
-	"devDependencies": {
-		"@c4312/matcha": "1.3.1",
-		"@mixer/parallel-prettier": "2.0.3",
-		"@pptr/testrunner": "0.8.0",
-		"@types/chai": "4.3.10",
-		"@types/chai-as-promised": "7.1.8",
-		"@types/chai-string": "1.4.5",
-		"@types/chai-subset": "1.3.5",
-		"@types/color": "3.0.6",
-		"@types/debug": "4.1.12",
-		"@types/diff": "5.0.8",
-		"@types/estree": "1.0.5",
-		"@types/express": "4.17.21",
-		"@types/glob": "8.1.0",
-		"@types/glob-stream": "8.0.2",
-		"@types/gulp": "4.0.17",
-		"@types/js-beautify": "1.14.3",
-		"@types/json-schema": "7.0.15",
-		"@types/linkifyjs": "2.1.7",
-		"@types/long": "4.0.2",
-		"@types/marked": "5.0.2",
-		"@types/micromatch": "4.0.5",
-		"@types/minimist": "1.2.5",
-		"@types/mkdirp": "1.0.2",
-		"@types/mocha": "10.0.4",
-		"@types/node": "20.9.2",
-		"@types/prettier": "2.7.3",
-		"@types/signale": "1.4.7",
-		"@types/sinon": "17.0.1",
-		"@types/split2": "4.2.3",
-		"@types/stream-buffers": "3.0.7",
-		"@types/tmp": "0.2.6",
-		"@types/to-absolute-glob": "2.0.3",
-		"@types/ws": "8.5.9",
-		"@typescript-eslint/eslint-plugin": "6.11.0",
-		"@typescript-eslint/parser": "6.11.0",
-		"@vscode/dwarf-debugging": "0.0.2",
-		"@vscode/test-electron": "2.3.6",
-		"chai": "4.3.10",
-		"chai-as-promised": "7.1.1",
-		"chai-string": "1.5.0",
-		"chai-subset": "1.6.0",
-		"del": "7.1.0",
-		"diff": "5.1.0",
-		"esbuild": "0.19.6",
-		"eslint": "8.54.0",
-		"eslint-plugin-header": "3.1.1",
-		"eslint-plugin-react": "7.33.2",
-		"express": "4.18.2",
-		"glob": "10.3.10",
-		"gulp": "4.0.2",
-		"gulp-cli": "2.3.0",
-		"gulp-filter": "9.0.1",
-		"gulp-rename": "2.0.0",
-		"gulp-util": "3.0.8",
-		"husky": "8.0.3",
-		"jszip": "3.10.1",
-		"marked": "10.0.0",
-		"merge2": "1.4.1",
-		"minimist": "1.2.8",
-		"mocha": "10.2.0",
-		"mocha-junit-reporter": "2.2.1",
-		"mocha-multi-reporters": "1.5.1",
-		"npm-run-all": "4.1.5",
-		"nyc": "15.1.0",
-		"playwright": "1.40.0",
-		"sinon": "17.0.1",
-		"stream-buffers": "3.0.2",
-		"ts-node": "10.9.1",
-		"tsx": "4.1.4",
-		"typescript": "5.2.2",
-		"vsce": "2.7.0"
-	},
-	"engines": {
-		"node": ">=10",
-		"vscode": "1.80.0"
-	},
-	"icon": "resources/logo.png",
-	"enabledApiProposals": [
-		"portsAttributes",
-		"workspaceTrust",
-		"tunnels"
-	],
-	"extensionKind": [
-		"workspace"
-	]
+  "name": "js-debug",
+  "displayName": "JavaScript Debugger",
+  "version": "0.0.1",
+  "private": "false",
+  "description": "An extension for debugging Node.js programs and Chrome.",
+  "bugs": {
+    "url": "https://github.com/CodeEditorLand/CodeEditorLand/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CodeEditorLand/CodeEditorLand.git"
+  },
+  "license": "MIT",
+  "author": {
+    "name": "Nikola Hristov",
+    "email": "nikola@nikolahristov.tech",
+    "url": "https://nikolahristov.tech"
+  },
+  "publisher": "playform",
+  "main": "./src/extension.js",
+  "scripts": {
+    "compile": "gulp",
+    "watch": "gulp watch",
+    "fmt": "gulp format",
+    "prepare": "husky install",
+    "package": "gulp package",
+    "publish": "gulp publish",
+    "precommit": "npm-run-all --parallel test:lint test:types",
+    "updatetypes": "cd src/typings && npx -y @vscode/dts dev && npx -y @vscode/dts master",
+    "updatenodeapi": "python src/build/getNodePdl.py",
+    "generateapis": "tsx src/build/generateDap.ts && tsx src/build/generateCdp.ts",
+    "test": "gulp && npm-run-all --parallel test:unit test:types test:golden test:lint",
+    "test:types": "tsc --noEmit",
+    "test:unit": "tsx node_modules/mocha/bin/mocha.js --config .mocharc.unit.js",
+    "test:golden": "node ./src/test/runTest.js",
+    "test:lint": "gulp lint",
+    "prepublishOnly": "TypeScriptESBuild 'Source/**/*.ts'"
+  },
+  "dependencies": {
+    "@c4312/chromehash": "0.3.0",
+    "@vscode/js-debug-browsers": "1.1.0",
+    "@vscode/l10n": "0.0.16",
+    "@vscode/win32-app-container-tokens": "0.1.0",
+    "acorn": "8.11.2",
+    "acorn-loose": "8.4.0",
+    "astring": "1.8.6",
+    "color": "4.2.3",
+    "data-uri-to-buffer": "6.0.1",
+    "default-browser": "5.1.0",
+    "dotenv": "16.3.1",
+    "eslint-visitor-keys": "3.4.3",
+    "execa": "8.0.1",
+    "glob-stream": "8.0.0",
+    "got": "13.0.0",
+    "inversify": "6.0.2",
+    "js-xxhash": "3.0.0",
+    "jsonc-parser": "3.2.0",
+    "linkifyjs": "4.1.3",
+    "micromatch": "4.0.5",
+    "path-browserify": "1.0.1",
+    "preact": "10.19.2",
+    "reflect-metadata": "0.1.13",
+    "signale": "1.4.0",
+    "source-map": "0.8.0-beta.0",
+    "source-map-support": "0.5.21",
+    "split2": "4.2.0",
+    "to-absolute-glob": "3.0.0",
+    "vscode-tas-client": "0.1.75",
+    "ws": "8.14.2"
+  },
+  "devDependencies": {
+    "@c4312/matcha": "1.3.1",
+    "@mixer/parallel-prettier": "2.0.3",
+    "@pptr/testrunner": "0.8.0",
+    "@types/chai": "4.3.11",
+    "@types/chai-as-promised": "7.1.8",
+    "@types/chai-string": "1.4.5",
+    "@types/chai-subset": "1.3.5",
+    "@types/color": "3.0.6",
+    "@types/debug": "4.1.12",
+    "@types/diff": "5.0.8",
+    "@types/estree": "1.0.5",
+    "@types/express": "4.17.21",
+    "@types/glob": "8.1.0",
+    "@types/glob-stream": "8.0.2",
+    "@types/gulp": "4.0.17",
+    "@types/js-beautify": "1.14.3",
+    "@types/json-schema": "7.0.15",
+    "@types/linkifyjs": "2.1.7",
+    "@types/long": "4.0.2",
+    "@types/marked": "5.0.2",
+    "@types/micromatch": "4.0.6",
+    "@types/minimist": "1.2.5",
+    "@types/mkdirp": "1.0.2",
+    "@types/mocha": "10.0.6",
+    "@types/node": "20.9.4",
+    "@types/prettier": "2.7.3",
+    "@types/signale": "1.4.7",
+    "@types/sinon": "17.0.2",
+    "@types/split2": "4.2.3",
+    "@types/stream-buffers": "3.0.7",
+    "@types/tmp": "0.2.6",
+    "@types/to-absolute-glob": "2.0.3",
+    "@types/ws": "8.5.10",
+    "@typescript-eslint/eslint-plugin": "6.12.0",
+    "@typescript-eslint/parser": "6.12.0",
+    "@vscode/dwarf-debugging": "0.0.2",
+    "@vscode/test-electron": "2.3.6",
+    "chai": "4.3.10",
+    "chai-as-promised": "7.1.1",
+    "chai-string": "1.5.0",
+    "chai-subset": "1.6.0",
+    "del": "7.1.0",
+    "diff": "5.1.0",
+    "esbuild": "0.19.7",
+    "eslint-plugin-header": "3.1.1",
+    "eslint-plugin-react": "7.33.2",
+    "express": "4.18.2",
+    "glob": "10.3.10",
+    "gulp": "4.0.2",
+    "gulp-cli": "2.3.0",
+    "gulp-filter": "9.0.1",
+    "gulp-rename": "2.0.0",
+    "gulp-util": "3.0.8",
+    "husky": "8.0.3",
+    "jszip": "3.10.1",
+    "marked": "10.0.0",
+    "merge2": "1.4.1",
+    "minimist": "1.2.8",
+    "mocha": "10.2.0",
+    "mocha-junit-reporter": "2.2.1",
+    "mocha-multi-reporters": "1.5.1",
+    "npm-run-all": "4.1.5",
+    "nyc": "15.1.0",
+    "playwright": "1.40.0",
+    "sinon": "17.0.1",
+    "stream-buffers": "3.0.2",
+    "ts-node": "10.9.1",
+    "tsx": "4.2.0",
+    "typescript": "5.3.2",
+    "vsce": "2.7.0",
+    "typescript-esbuild": "0.3.1"
+  },
+  "icon": "resources/logo.png",
+  "enabledApiProposals": [
+    "portsAttributes",
+    "workspaceTrust",
+    "tunnels"
+  ],
+  "extensionKind": [
+    "workspace"
+  ],
+  "homepage": "https://github.com/CodeEditorLand/CodeEditorLand#readme",
+  "type": "module",
+  "publishConfig": {
+    "access": "public"
+  }
 }
